--- a/ScwSvc/ScwSvc.csproj
+++ b/ScwSvc/ScwSvc.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.0-preview" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.5.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
 
