--- a/ScwSvc/ScwSvc.csproj
+++ b/ScwSvc/ScwSvc.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>ace9a1ec-ceb2-4c89-ba31-324aa89e30e8</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <StartupObject>ScwSvc.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
