--- a/src/Backend/ScwSvc/Properties/launchSettings.json
+++ b/src/Backend/ScwSvc/Properties/launchSettings.json
@@ -11,16 +11,16 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "api/students",
+      "launchBrowser": false,
+      "launchUrl": "api/service/myroles",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "ScwSvc": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "api/students",
+      "launchBrowser": false,
+      "launchUrl": "api/service/myroles",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
