--- a/src/Frontend/scw/package.json
+++ b/src/Frontend/scw/package.json
@@ -12,14 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.1",
+    "@angular/cdk": "^11.0.1",
     "@angular/common": "~11.0.1",
     "@angular/compiler": "~11.0.1",
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
+    "@angular/material": "^11.0.1",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@handsontable/angular": "^6.0.1",
+    "fast-sha256": "^1.3.0",
     "handsontable": "^8.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
