--- a/src/Frontend/scw/package.json
+++ b/src/Frontend/scw/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@handsontable-pro/angular": "^2.0.0",
     "@handsontable/angular": "^6.0.1",
+    "dhx-spreadsheet": "^4.0.0",
     "fast-sha256": "^1.3.0",
     "handsontable": "^8.2.0",
     "rxjs": "~6.6.0",
