--- a/src/Frontend/scw/angular.json
+++ b/src/Frontend/scw/angular.json
@@ -32,7 +32,10 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/handsontable/dist/handsontable.full.css"
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
