--- a/src/Frontend/scw/package.json
+++ b/src/Frontend/scw/package.json
@@ -15,23 +15,32 @@
     "@angular/cdk": "^11.0.1",
     "@angular/common": "~11.0.1",
     "@angular/compiler": "~11.0.1",
-    "@angular/core": "~11.0.1",
+    "@angular/core": "^11.0.9",
     "@angular/forms": "~11.0.1",
     "@angular/material": "^11.0.1",
-    "@angular/platform-browser": "~11.0.1",
-    "@angular/platform-browser-dynamic": "~11.0.1",
-    "@angular/router": "~11.0.1",
+    "@angular/platform-browser": "^11.0.9",
+    "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/router": "^11.2.10",
+    "@apollo/client": "^3.0.0",
+    "@fullcalendar/angular": "^5.6.0",
+    "@fullcalendar/core": "^5.6.0",
+    "@fullcalendar/daygrid": "^5.6.0",
     "@handsontable-pro/angular": "^2.0.0",
     "@handsontable/angular": "^6.0.1",
+    "apollo-angular": "^2.4.0",
     "dhx-spreadsheet": "^4.0.0",
     "fast-sha256": "^1.3.0",
+    "graphql": "^15.0.0",
     "handsontable": "^8.2.0",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.2",
+    "@angular-devkit/build-angular": "^0.1102.12",
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
     "@types/jasmine": "~3.6.0",
@@ -39,7 +48,7 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
