--- a/src/Frontend/scw/package.json
+++ b/src/Frontend/scw/package.json
@@ -21,6 +21,7 @@
     "apollo": "^2.33.1",
     "apollo-angular": "^2.4.0",
     "fast-sha256": "^1.3.0",
+    "file-saver": "^2.0.5",
     "handsontable": "^8.3.2",
     "polyfills": "^2.1.1",
     "primeflex": "^2.0.0",
@@ -28,6 +29,7 @@
     "primeng": "^11.4.0",
     "sha256": "^0.2.0",
     "typescript": "4.1.5",
+    "xlsx": "^0.16.9",
     "zone.js": "^0.11.0"
   },
   "devDependencies": {
