--- a/src/Frontend/scw/package.json
+++ b/src/Frontend/scw/package.json
@@ -23,6 +23,7 @@
     "fast-sha256": "^1.3.0",
     "file-saver": "^2.0.5",
     "handsontable": "^8.3.2",
+    "jspdf": "^2.3.1",
     "polyfills": "^2.1.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
