--- a/src/Frontend/scw/package.json
+++ b/src/Frontend/scw/package.json
@@ -18,12 +18,28 @@
     "@angular/platform-browser-dynamic": "^11.2.13",
     "@angular/router": "^11.2.13",
     "@apollo/client": "^3.3.16",
+    "@grapecity/spread-excelio": "14.0.10",
+    "@grapecity/spread-sheets": "14.0.10",
+    "@grapecity/spread-sheets-barcode": "14.0.10",
+    "@grapecity/spread-sheets-charts": "14.0.10",
+    "@grapecity/spread-sheets-designer": "14.0.10",
+    "@grapecity/spread-sheets-designer-angular": "14.0.10",
+    "@grapecity/spread-sheets-designer-resources-en": "14.0.10",
+    "@grapecity/spread-sheets-languagepackages": "14.0.10",
+    "@grapecity/spread-sheets-pdf": "14.0.10",
+    "@grapecity/spread-sheets-pivot-addon": "14.0.10",
+    "@grapecity/spread-sheets-print": "14.0.10",
+    "@grapecity/spread-sheets-resources-ja": "14.0.10",
+    "@grapecity/spread-sheets-resources-ko": "14.0.10",
+    "@grapecity/spread-sheets-resources-zh": "14.0.10",
+    "@grapecity/spread-sheets-shapes": "14.0.10",
+    "@types/file-saver": "^2.0.2",
     "apollo": "^2.33.1",
     "apollo-angular": "^2.4.0",
     "fast-sha256": "^1.3.0",
-    "file-saver": "^2.0.5",
     "handsontable": "^8.3.2",
     "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
     "polyfills": "^2.1.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
@@ -38,6 +54,7 @@
     "@angular/animations": "^11.2.13",
     "@angular/compiler": "^11.2.13",
     "@angular/compiler-cli": "^11.2.13",
-    "@angular/core": "^11.2.13"
+    "@angular/core": "^11.2.13",
+    "file-saver": "^2.0.5"
   }
 }
