added one api for admins to delete users, added 2 popup windows, deleting users works, working on edit users

--- a/src/Frontend/scw/package.json
+++ b/src/Frontend/scw/package.json
@@ -48,6 +48,7 @@
     "primeng": "^11.4.0",
     "sha256": "^0.2.0",
     "typescript": "4.1.5",
+    "underscore": "^1.13.1",
     "xlsx": "^0.16.9",
     "zone.js": "^0.11.0"
   },
