--- a/src/Frontend/scw/package.json
+++ b/src/Frontend/scw/package.json
@@ -37,6 +37,7 @@
     "@types/file-saver": "^2.0.2",
     "apollo": "^2.33.1",
     "apollo-angular": "^2.4.0",
+    "chart.js": "2.9.4",
     "dialog": "^0.3.1",
     "fast-sha256": "^1.3.0",
     "handsontable": "^8.3.2",
