--- a/src/Backend/ScwSvc.DataAccess.Impl/ScwSvc.DataAccess.Impl.csproj
+++ b/src/Backend/ScwSvc.DataAccess.Impl/ScwSvc.DataAccess.Impl.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql" Version="5.0.11" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ScwSvc.DataAccess.Interfaces\ScwSvc.DataAccess.Interfaces.csproj" />
     <ProjectReference Include="..\ScwSvc.Exceptions\ScwSvc.Exceptions.csproj" />
     <ProjectReference Include="..\ScwSvc.Models\ScwSvc.Models.csproj" />
