Continue refactoring backend and add dates

--- a/src/Backend/ScwSvc/ScwSvc.csproj
+++ b/src/Backend/ScwSvc/ScwSvc.csproj
@@ -16,28 +16,28 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HotChocolate.AspNetCore" Version="11.2.2" />
-    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="11.2.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.12" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.12" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
+    <PackageReference Include="HotChocolate.AspNetCore" Version="12.3.2" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.3.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="5.6.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ScwSvc.BusinessLogic.Impl\ScwSvc.BusinessLogic.Impl.csproj" />
-    <ProjectReference Include="..\ScwSvc.BusinessLogic.Interfaces\ScwSvc.BusinessLogic.Interfaces.csproj" />
+    <ProjectReference Include="..\ScwSvc.BusinessLogic.Impl\ScwSvc.Procedures.Impl.csproj" />
+    <ProjectReference Include="..\ScwSvc.BusinessLogic.Interfaces\ScwSvc.Procedures.Interfaces.csproj" />
     <ProjectReference Include="..\ScwSvc.DataAccess.Impl\ScwSvc.DataAccess.Impl.csproj" />
     <ProjectReference Include="..\ScwSvc.DataAccess.Interfaces\ScwSvc.DataAccess.Interfaces.csproj" />
     <ProjectReference Include="..\ScwSvc.Exceptions\ScwSvc.Exceptions.csproj" />
     <ProjectReference Include="..\ScwSvc.Models\ScwSvc.Models.csproj" />
+    <ProjectReference Include="..\ScwSvc.Operations.Impl\ScwSvc.Operations.Impl.csproj" />
+    <ProjectReference Include="..\ScwSvc.Operations.Interfaces\ScwSvc.Operations.Interfaces.csproj" />
   </ItemGroup>
 
 
