--- a/src/Backend/ScwSvc.Operations.Impl/ScwSvc.Operations.Impl.csproj
+++ b/src/Backend/ScwSvc.Operations.Impl/ScwSvc.Operations.Impl.csproj
@@ -2,13 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ScwSvc.BusinessLogic.Interfaces\ScwSvc.BusinessLogic.Interfaces.csproj" />
     <ProjectReference Include="..\ScwSvc.DataAccess.Interfaces\ScwSvc.DataAccess.Interfaces.csproj" />
     <ProjectReference Include="..\ScwSvc.Exceptions\ScwSvc.Exceptions.csproj" />
     <ProjectReference Include="..\ScwSvc.Models\ScwSvc.Models.csproj" />
+    <ProjectReference Include="..\ScwSvc.Operations.Interfaces\ScwSvc.Operations.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
