--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,4 +1,4 @@
-name: .NET 5 Build and Docker Image
+name: .NET 6 Build and Docker Image
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build .NET 5 project
+    name: Build .NET 6 project
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -18,10 +18,10 @@ jobs:
     - name: Check out the repo
       uses: actions/checkout@v2
 
-    - name: Setup .NET Core
+    - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.204
+        dotnet-version: 6.0.100
 
     - name: Install dependencies
       run: dotnet restore
