fix npm dependencies and update gitignore

--- a/src/Frontend/scw/package.json
+++ b/src/Frontend/scw/package.json
@@ -1,66 +1,48 @@
 {
-  "name": "scw",
-  "version": "1.0.0",
-  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 11.0.2.",
-  "main": "karma.conf.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ng serve"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@angular-devkit/build-webpack": "0.1300.4",
-    "@angular/animations": "^12.2.13",
-    "@angular/cdk": "^12.2.13",
-    "@angular/cli": "^12.2.13",
-    "@angular/common": "^12.2.13",
-    "@angular/forms": "^12.2.13",
-    "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "^12.2.13",
-    "@angular/platform-browser-dynamic": "^12.2.13",
-    "@angular/router": "^12.2.13",
-    "@apollo/client": "^3.5.5",
-    "@apollo/federation": "0.33.8",
-    "@grapecity/spread-excelio": "14.0.10",
-    "@grapecity/spread-sheets": "14.0.10",
-    "@grapecity/spread-sheets-barcode": "14.0.10",
-    "@grapecity/spread-sheets-charts": "14.0.10",
-    "@grapecity/spread-sheets-designer": "14.0.10",
-    "@grapecity/spread-sheets-designer-angular": "14.0.10",
-    "@grapecity/spread-sheets-designer-resources-en": "14.0.10",
-    "@grapecity/spread-sheets-languagepackages": "14.0.10",
-    "@grapecity/spread-sheets-pdf": "14.0.10",
-    "@grapecity/spread-sheets-pivot-addon": "14.0.10",
-    "@grapecity/spread-sheets-print": "14.0.10",
-    "@grapecity/spread-sheets-resources-ja": "14.0.10",
-    "@grapecity/spread-sheets-resources-ko": "14.0.10",
-    "@grapecity/spread-sheets-resources-zh": "14.0.10",
-    "@grapecity/spread-sheets-shapes": "14.0.10",
-    "@graphql-typed-document-node/core": "3.1.1",
-    "@types/file-saver": "^2.0.4",
-    "apollo": "^2.33.9",
-    "apollo-angular": "^2.6.0",
-    "colord": "^2.9.1",
-    "dialog": "^0.3.1",
-    "fast-sha256": "^1.3.0",
-    "graphql": "^15.5.3",
-    "jspdf": "^2.3.1",
-    "jspdf-autotable": "^3.5.14",
-    "polyfills": "^1.9.5",
-    "primeflex": "^2.0.0",
-    "primeicons": "^4.1.0",
-    "primeng": "^12.0.1",
-    "sha256": "^0.2.0",
-    "typescript": "^4.1.6",
-    "xlsx": "^0.17.4",
-    "zone.js": "^0.11.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.13",
-    "@angular/compiler": "^12.2.13",
-    "@angular/compiler-cli": "^12.2.13",
-    "@angular/core": "^12.2.13",
-    "file-saver": "^2.0.5"
-  }
+    "name": "scw",
+    "version": "1.0.0",
+    "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 11.0.2.",
+    "main": "karma.conf.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@angular-devkit/build-angular": "^12.2.14",
+        "@angular/animations": "^12.2.14",
+        "@angular/cli": "^12.2.14",
+        "@angular/common": "^12.2.14",
+        "@angular/forms": "^12.2.14",
+        "@angular/material": "^12.2.13",
+        "@angular/platform-browser-dynamic": "^12.2.15",
+        "@angular/router": "^12.2.14",
+        "@angular/service-worker": "^12.2.15",
+        "@grapecity/spread-excelio": "^14.2.5",
+        "@grapecity/spread-sheets": "^14.2.5",
+        "@grapecity/spread-sheets-barcode": "^14.2.5",
+        "@grapecity/spread-sheets-charts": "^14.2.5",
+        "@grapecity/spread-sheets-designer": "^14.2.5",
+        "@grapecity/spread-sheets-designer-angular": "^14.2.5",
+        "@grapecity/spread-sheets-designer-resources-en": "^14.2.5",
+        "@grapecity/spread-sheets-languagepackages": "^14.2.5",
+        "@grapecity/spread-sheets-pdf": "^14.2.5",
+        "@grapecity/spread-sheets-pivot-addon": "^14.2.5",
+        "@grapecity/spread-sheets-print": "^14.2.5",
+        "@grapecity/spread-sheets-resources-ja": "^14.2.5",
+        "@grapecity/spread-sheets-resources-ko": "^14.2.5",
+        "@grapecity/spread-sheets-resources-zh": "^14.2.5",
+        "@grapecity/spread-sheets-shapes": "^14.2.5",
+        "@types/file-saver": "^2.0.4",
+        "apollo-angular": "^2.6.0",
+        "fast-sha256": "^1.3.0",
+        "file-saver": "^2.0.5",
+        "jspdf": "^2.4.0",
+        "jspdf-autotable": "^3.5.23",
+        "primeflex": "^3.1.2",
+        "primeicons": "^5.0.0",
+        "primeng": "^12.2.3",
+        "typescript": "^4.3.0",
+        "xlsx": "^0.17.4"
+    }
 }
