--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -30,8 +30,11 @@ jobs:
     - name: Build
       run: node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build --configuration production
       
-    - name: Copy directory
-      run: cp ../../src/Frontend/scw/dist/scw/* ../../src/public
+    - name: Publish Build Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: angular-frontend-build
+        path: dist/scw
 
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -54,7 +57,14 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: if20b194/scw_frontend
+          
+      - name: Download build
+        uses: actions/download-artifact@v2
+        with:
+          name: angular-frontend-build
+          path: ./src/public
 
+    
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
