--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -30,11 +30,14 @@ jobs:
     - name: Build
       run: node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build --configuration production
       
+    - name: Show Directories
+      run: ls -R
+      
     - name: Publish Build Artifact
       uses: actions/upload-artifact@v2
       with:
         name: angular-frontend-build
-        path: dist/scw
+        path: dist/scw/
 
   push_to_registry:
     name: Push Docker image to Docker Hub
