Continue work on refactoring backend

--- a/src/Backend/ScwSvc.BusinessLogic.Impl/ScwSvc.Procedures.Impl.csproj
+++ b/src/Backend/ScwSvc.BusinessLogic.Impl/ScwSvc.Procedures.Impl.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\ScwSvc.BusinessLogic.Interfaces\ScwSvc.Procedures.Interfaces.csproj" />
-    <ProjectReference Include="..\ScwSvc.Exceptions\ScwSvc.Exceptions.csproj" />
-    <ProjectReference Include="..\ScwSvc.Models\ScwSvc.Models.csproj" />
-    <ProjectReference Include="..\ScwSvc.Operations.Interfaces\ScwSvc.Operations.Interfaces.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\ScwSvc.BusinessLogic.Interfaces\ScwSvc.Procedures.Interfaces.csproj" />
+		<ProjectReference Include="..\ScwSvc.Exceptions\ScwSvc.Exceptions.csproj" />
+		<ProjectReference Include="..\ScwSvc.Models\ScwSvc.Models.csproj" />
+		<ProjectReference Include="..\ScwSvc.Operations.Interfaces\ScwSvc.Operations.Interfaces.csproj" />
+	</ItemGroup>
 
 </Project>
