--- a/src/Backend/ScwSvc.DataAccess.Interfaces/ScwSvc.DataAccess.Interfaces.csproj
+++ b/src/Backend/ScwSvc.DataAccess.Interfaces/ScwSvc.DataAccess.Interfaces.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\ScwSvc.Exceptions\ScwSvc.Exceptions.csproj" />
-    <ProjectReference Include="..\ScwSvc.Models\ScwSvc.Models.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\ScwSvc.Exceptions\ScwSvc.Exceptions.csproj" />
+		<ProjectReference Include="..\ScwSvc.Models\ScwSvc.Models.csproj" />
+	</ItemGroup>
 
 </Project>
