--- a/src/Backend/ScwSvc.Exceptions/ScwSvc.Exceptions.csproj
+++ b/src/Backend/ScwSvc.Exceptions/ScwSvc.Exceptions.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\ScwSvc.Models\ScwSvc.Models.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\ScwSvc.Models\ScwSvc.Models.csproj" />
+	</ItemGroup>
 
 </Project>
