--- a/src/Backend/ScwSvc/ScwSvc.csproj
+++ b/src/Backend/ScwSvc/ScwSvc.csproj
@@ -17,6 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.3.2" />
     <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.3.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
