--- a/src/Backend/ScwSvc.Operations.Impl/ScwSvc.Operations.Impl.csproj
+++ b/src/Backend/ScwSvc.Operations.Impl/ScwSvc.Operations.Impl.csproj
@@ -6,6 +6,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="System.Linq.Async" Version="5.1.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\ScwSvc.DataAccess.Interfaces\ScwSvc.DataAccess.Interfaces.csproj" />
 		<ProjectReference Include="..\ScwSvc.Exceptions\ScwSvc.Exceptions.csproj" />
 		<ProjectReference Include="..\ScwSvc.Models\ScwSvc.Models.csproj" />
