--- a/src/Frontend/scw/package.json
+++ b/src/Frontend/scw/package.json
@@ -40,6 +40,7 @@
     "chart.js": "2.9.4",
     "dialog": "^0.3.1",
     "fast-sha256": "^1.3.0",
+    "graphql-scalars": "^1.14.1",
     "handsontable": "^8.3.2",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.14",
